# Galileo-Onboarding-Project

./: .gitignore  README.md  main.py  pyproject.toml
tools/: __init__.py  bank_balance.py  customer_info.py  stock_advice.py
